tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_route_empty/errors.duarouter
Error: Attribute 'route' in definition of vehicle '1' is empty.
Error: route cannot be empty
Quitting (on error).
